change site URL

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-url: https://gliderforecast.com/blog
+url: https://gliderforecast.github.io
 name: Glider Forecast blog
 description: Weather forecast and more
 
